Último commit da lista

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       </div>
 
       <div class="tasks-container"></div>
+      <script
+        src="https://kit.fontawesome.com/19e1530b73.js"
+        crossorigin="anonymous"
+      ></script>
       <script src="script.js"></script>
     </div>
   </body>
